<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent" android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainPageActivity"
                tools:layout_editor_absoluteY="65dp" tools:layout_editor_absoluteX="156dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fabflix_main"
                android:id="@+id/title"
                android:layout_centerHorizontal="true"
                android:textColor="@color/red"
                android:textSize="60sp"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search_input"
                android:hint="@string/search_for_titles"
                android:focusable="true"
                android:layout_marginTop="46dp"
                android:layout_below="@+id/title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        <Button
                android:text="@string/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search"
                android:layout_below="@+id/search_input"/>

        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/message"
                android:layout_below="@+id/search"
                android:layout_centerHorizontal="true"
                android:textSize="25sp"/>

</RelativeLayout>